--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-padding-32" style="background-color: #ff4fc4; color: white;">
-  <p>Made with 💕 by Quotivate Team</p>
+  <p>Made with 💕 by Atharva Bengeri</p>
 </footer>
 
 </body>
