--- a/about.html
+++ b/about.html
@@ -96,6 +96,7 @@
           rel="stylesheet">
   
     <title>Quotivate - Submit a Quote</title>
+    <link rel="icon" type="image/png" href="./favicon.png">
   </head>
 
   <body id="body">
