--- a/quotes.html
+++ b/quotes.html
@@ -123,6 +123,7 @@
           rel="stylesheet">
   
     <title>Quotivate</title>
+    <link rel="icon" type="image/png" href="./favicon.png">
   </head>
 
   <body id="body">
