--- a/shared.html
+++ b/shared.html
@@ -79,6 +79,7 @@
           rel="stylesheet">
   
     <title>Quotivate - Shared Quotes</title>
+    <link rel="icon" type="image/png" href="./favicon.png">
   </head>
 
   <body id="body">
