--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- Decorative Section -->
 <div class="decorative w3-animate-opacity">
   <i class="fa-solid fa-sparkles fa-2x"></i>
-  <p>Scroll down for more love & motivation!</p>
+  <p>Email: abengeri1@gmail.com</p>
   <i class="fa-solid fa-heart fa-2x"></i>
 </div>
 
