--- a/login.html
+++ b/login.html
@@ -50,6 +50,7 @@
     import {
       getAuth,
       signInWithEmailAndPassword,
+      signInAnonymously,
       createUserWithEmailAndPassword,
       GoogleAuthProvider,
       signInWithPopup,
