--- a/profile.html
+++ b/profile.html
@@ -31,6 +31,19 @@
   </style>
 </head>
 <body>
+  <nav class="navbar">
+      <div class="navbar-content">
+        <h1 class="navbar-title">quotivate</h1>
+        <ul class="navbar-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="quotes.html">Quotes</a></li>
+          <li><a href="shared.html">Shared Quotes</a></li>
+          <li><a href="about.html">Submit a Quote</a></li>
+		  <li><a href="login.html">Login</a></li>
+        </ul>
+      </div>
+    </nav>
+
 
   <h1>Welcome, <span id="username">User</span></h1>
 
