--- a/profile.html
+++ b/profile.html
@@ -1,37 +1,245 @@
-function displayQuotes(quotes) {
-  quoteList.innerHTML = "";
-  if (quotes.length === 0) {
-    quoteList.innerHTML = "<p>You haven't submitted any quotes yet.</p>";
-    return;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Profile - Quotivate</title>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubble&family=Patrick+Hand&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Patrick Hand", cursive;
+      background: #ffe0f0;
+      padding: 20px;
+    }
+    h1, h2 {
+      font-family: "Rubik Bubble", cursive;
+      color: hotpink;
+      text-align: center;
+    }
+    .section {
+      margin-top: 40px;
+    }
+    .quote-box, .comment-box {
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin: 15px auto;
+      padding: 15px 20px;
+      max-width: 700px;
+    }
+    .quote-text {
+      font-size: 1.2em;
+      color: #333;
+    }
+    .quote-author {
+      font-weight: bold;
+      margin-top: 8px;
+      color: #555;
+    }
+    .meta {
+      font-size: 0.85em;
+      color: #888;
+      margin-top: 5px;
+    }
+    .comments-list {
+      margin-top: 10px;
+      padding-left: 15px;
+      border-left: 3px solid hotpink;
+    }
+    .comment-item {
+      margin-bottom: 10px;
+    }
+    .login-redirect {
+      text-align: center;
+      margin-top: 50px;
+    }
+    .login-redirect a {
+      background: hotpink;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 12px;
+      text-decoration: none;
+      font-size: 1.1em;
+    }
+  </style>
+</head>
+<body>
+  <h1>Your Profile</h1>
 
-  quotes.forEach((quote) => {
-    const box = document.createElement("div");
-    box.className = "quote-box";
-    
-    const timestamp = quote.timestamp ? new Date(quote.timestamp).toLocaleString() : "Unknown date";
-    const upvotes = quote.upvotes || 0;
-    const comments = quote.comments || [];
+  <div id="submitted-section" class="section">
+    <h2>🧾 Your Submitted Quotes</h2>
+    <div id="quote-list"></div>
+  </div>
 
-    let commentsHTML = "";
-    if (comments.length > 0) {
-      commentsHTML = "<ul>";
-      comments.forEach((c) => {
-        commentsHTML += `<li><strong>${c.commenter}</strong> (${new Date(c.timestamp).toLocaleString()}): ${c.text}</li>`;
-      });
-      commentsHTML += "</ul>";
-    } else {
-      commentsHTML = "<p>No comments yet.</p>";
+  <div id="comments-submitted-section" class="section">
+    <h2>🗨️ Comments You Submitted</h2>
+    <div id="comments-submitted"></div>
+  </div>
+
+  <div id="comments-on-posts-section" class="section">
+    <h2>🧍 Comments on Your Posts</h2>
+    <div id="comments-on-posts"></div>
+  </div>
+
+  <div class="login-redirect" id="login-message" style="display: none;">
+    <p>Please <a href="login.html">login</a> to view your profile.</p>
+  </div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+    import {
+      getFirestore,
+      collection,
+      getDocs,
+      query,
+      where
+    } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+    } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDaxGdsgwL_T2ejOh74WK8TA2EJDdxswOw",
+      authDomain: "quoteapp-e57e7.firebaseapp.com",
+      projectId: "quoteapp-e57e7",
+      storageBucket: "quoteapp-e57e7.appspot.com",
+      messagingSenderId: "1065813414568",
+      appId: "1:1065813414568:web:10e8261f971f05c7cae89d",
+      measurementId: "G-XWP863T7K1",
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
+
+    const quoteList = document.getElementById("quote-list");
+    const commentsSubmittedDiv = document.getElementById("comments-submitted");
+    const commentsOnPostsDiv = document.getElementById("comments-on-posts");
+    const loginMsg = document.getElementById("login-message");
+
+    function formatDate(ts) {
+      return ts ? new Date(ts.seconds ? ts.seconds * 1000 : ts).toLocaleString() : "Unknown date";
     }
 
-    box.innerHTML = `
-      <div class="quote-text">“${quote.quote}”</div>
-      <div class="quote-author">– ${quote.author || "Anonymous"}</div>
-      <p><strong>Posted:</strong> ${timestamp}</p>
-      <p><strong>Upvotes:</strong> ${upvotes}</p>
-      <div><strong>Comments:</strong> ${commentsHTML}</div>
-    `;
+    function displaySubmittedQuotes(quotes) {
+      quoteList.innerHTML = "";
+      if (quotes.length === 0) {
+        quoteList.innerHTML = "<p>You haven't submitted any quotes yet.</p>";
+        return;
+      }
+      quotes.forEach(q => {
+        const box = document.createElement("div");
+        box.className = "quote-box";
+        box.innerHTML = `
+          <div class="quote-text">“${q.quote}”</div>
+          <div class="quote-author">– ${q.author || "Anonymous"}</div>
+          <div class="meta">Posted: ${formatDate(q.timestamp)} | Upvotes: ${q.upvotes || 0}</div>
+          <div class="comments-list">
+            ${q.comments && q.comments.length > 0 ? 
+              q.comments.map(c => `
+                <div class="comment-item">
+                  <strong>${c.user || "Anonymous"}:</strong> ${c.text}
+                  <div class="meta">${formatDate(c.timestamp)}</div>
+                </div>
+              `).join("") : "<em>No comments yet</em>"
+            }
+          </div>
+        `;
+        quoteList.appendChild(box);
+      });
+    }
 
-    quoteList.appendChild(box);
-  });
-}
+    function displayCommentsSubmitted(comments) {
+      commentsSubmittedDiv.innerHTML = "";
+      if (comments.length === 0) {
+        commentsSubmittedDiv.innerHTML = "<p>You haven't commented on any quotes yet.</p>";
+        return;
+      }
+      comments.forEach(c => {
+        const box = document.createElement("div");
+        box.className = "comment-box";
+        box.innerHTML = `
+          <div><strong>Quote:</strong> “${c.quotePreview}”</div>
+          <div><strong>Your Comment:</strong> ${c.text}</div>
+          <div class="meta">${formatDate(c.timestamp)}</div>
+        `;
+        commentsSubmittedDiv.appendChild(box);
+      });
+    }
+
+    function displayCommentsOnPosts(comments) {
+      commentsOnPostsDiv.innerHTML = "";
+      if (comments.length === 0) {
+        commentsOnPostsDiv.innerHTML = "<p>No one has commented on your quotes yet.</p>";
+        return;
+      }
+      comments.forEach(c => {
+        const box = document.createElement("div");
+        box.className = "comment-box";
+        box.innerHTML = `
+          <div><strong>On Quote:</strong> “${c.quotePreview}”</div>
+          <div><strong>${c.user}:</strong> ${c.text}</div>
+          <div class="meta">${formatDate(c.timestamp)}</div>
+        `;
+        commentsOnPostsDiv.appendChild(box);
+      });
+    }
+
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        loginMsg.style.display = "block";
+        return;
+      }
+
+      try {
+        const allQuotesSnap = await getDocs(collection(db, "quotes"));
+        const submittedQuotes = [];
+        const commentsYouMade = [];
+        const commentsOnYourPosts = [];
+
+        allQuotesSnap.forEach(docSnap => {
+          const data = docSnap.data();
+
+          // Quotes you submitted
+          if (data.author === user.displayName) {
+            submittedQuotes.push(data);
+
+            // Comments on your quotes by others
+            if (data.comments) {
+              data.comments.forEach(c => {
+                if (c.user !== user.displayName) {
+                  commentsOnYourPosts.push({
+                    quotePreview: data.quote.slice(0, 50) + (data.quote.length > 50 ? "..." : ""),
+                    ...c
+                  });
+                }
+              });
+            }
+          }
+
+          // Comments you submitted on others' quotes
+          if (data.comments) {
+            data.comments.forEach(c => {
+              if (c.user === user.displayName) {
+                commentsYouMade.push({
+                  quotePreview: data.quote.slice(0, 50) + (data.quote.length > 50 ? "..." : ""),
+                  ...c
+                });
+              }
+            });
+          }
+        });
+
+        displaySubmittedQuotes(submittedQuotes);
+        displayCommentsSubmitted(commentsYouMade);
+        displayCommentsOnPosts(commentsOnYourPosts);
+
+      } catch (err) {
+        console.error("Error loading profile data:", err);
+        quoteList.innerHTML = "<p>Error loading data.</p>";
+      }
+    });
+  </script>
+</body>
+</html>
