--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Profile - Quotivate</title>
+  <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubble&family=Patrick+Hand&display=swap" rel="stylesheet">
   <style>
     body {
@@ -73,6 +74,7 @@
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
 		  <li><a href="login.html">Login</a></li>
+		  <li><a href="profile.html">Profile</a></li>
         </ul>
       </div>
     </nav>
