--- a/about.html
+++ b/about.html
@@ -109,7 +109,9 @@
           <li><a href="quotes.html">Quotes</a></li>
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
-	  <li><a href="login.html">Login</a></li>
+	 	  <li><a href="login.html">Login</a></li>
+		  <a href="profile.html" class="profile-link">
+    		<img src="profile.png" alt="Profile" />
         </ul>
       </div>
     </nav>
