--- a/profile.html
+++ b/profile.html
@@ -74,7 +74,8 @@
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
 		  <li><a href="login.html">Login</a></li>
-		  <li><a href="profile.html">Profile</a></li>
+		  <a href="profile.html" class="profile-link">
+    		<img src="profile.png" alt="Profile" />
         </ul>
       </div>
     </nav>
