--- a/quotes.html
+++ b/quotes.html
@@ -137,8 +137,7 @@
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
 		  <li><a href="login.html">Login</a></li>
-		  <a href="profile.html" class="profile-link">
-    		<img src="profile.png" alt="Profile" />
+		  <li><a href="profile.html">👨🏻‍💼</a></li>
         </ul>
       </div>
     </nav>
