--- a/profile.html
+++ b/profile.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Profile - Quotivate</title>
   <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubble&family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: "Patrick Hand", cursive;
       background: #ffe0f0;
-      padding: 20px;
+      
     }
     h1, h2 {
       font-family: "Rubik Bubble", cursive;
       color: hotpink;
       text-align: center;
+	  margin-top:20px;
     }
     .section {
       margin-top: 40px;
