--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
       margin: 4rem 2rem;
       font-size: 1.4rem;
     }
+    .seo-keywords {
+      position: absolute !important;
+      width: 1px; 
+      height: 1px; 
+      padding: 0; 
+      margin: -1px; 
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      border: 0;
+    }
+
   </style>
 </head>
 <body>
@@ -71,6 +82,17 @@
 <!-- Navbar -->
 <div class="w3-bar w3-top w3-large w3-padding">
  
+</div>
+<div class="seo-keywords" aria-hidden="true">
+  <h1>Quotivate — Discover and Share Inspiring Quotes</h1>
+  <h2>Daily Motivational Quotes to Brighten Your Day</h2>
+  <h2>Create Your Personal Quote Profile</h2>
+  <h2>Submit Your Favorite Quotes and Spread Inspiration</h2>
+  <h2>Explore Quotes from Other Users</h2>
+  <h2>Join Our Community of Quote Lovers</h2>
+  <h2>About Quotivate — Your Source for Uplifting Quotes</h2>
+
+  <p>Trending Searches: inspirational quotes, motivational quotes, random quotes, daily quotes, best quotes</p>
 </div>
 
 <!-- Hero Section -->
